crates/pv-release/tests/snapshots/publication__publication_stage_rejects_manifest_key_collision_with_candidate_record_before_write.snap
---
source: crates/pv-release/tests/publication.rs
expression: "publication_error_summary(error, fixture.root())"
---
(
    "InvalidPublicationInput",
    "records/resources/redis/8.2/8.2.1-pv1/darwin-arm64/redis-8.2.1-pv1-darwin-arm64.json",
    "publication local path collides between `stable manifest` and `candidate release record`",
)
