crates/pv-release/tests/snapshots/publication__publication_stage_rejects_manifest_key_collision_with_publication_plan_before_write.snap
---
source: crates/pv-release/tests/publication.rs
expression: "publication_error_summary(error, fixture.root())"
---
(
    "InvalidPublicationInput",
    "publication-plan.json",
    "publication local path collides between `versioned manifest` and `publication plan`",
)
