crates/pv-release/tests/snapshots/publication__publication_stage_rejects_missing_archive_before_manifest_write.snap
---
source: crates/pv-release/tests/publication.rs
expression: "publication_error_summary(error, tempdir.path())"
---
(
    "InvalidPublicationInput",
    "source-archives",
    "missing source archive `redis-8.2.1-pv1-darwin-arm64.tar.gz`",
)
