crates/pv-release/tests/snapshots/publication__publication_stage_rejects_non_default_native_track_missing_platform.snap
---
source: crates/pv-release/tests/publication.rs
expression: "publication_error_summary(error, fixture.root())"
---
(
    "GeneratedManifestInvalid",
    "",
    "public stable manifest resource `redis` track `7.2` is missing required platform(s): darwin-amd64",
)
