crates/pv-release/tests/snapshots/publication__publication_stage_rejects_public_manifest_missing_native_platform_before_write.snap
---
source: crates/pv-release/tests/publication.rs
expression: "publication_error_summary(error, fixture.root())"
---
(
    "GeneratedManifestInvalid",
    "",
    "public stable manifest default resource `redis` track `8.2` is missing required platform(s): darwin-amd64",
)
