crates/pv-release/tests/snapshots/publication__publication_stage_rejects_public_manifest_with_revoked_arm64_platform.snap
---
source: crates/pv-release/tests/publication.rs
expression: "publication_error_summary(error, fixture.root())"
---
(
    "GeneratedManifestInvalid",
    "",
    "public stable manifest resource `redis` track `8.2` is missing required platform(s): darwin-arm64",
)
