crates/pv-release/tests/snapshots/publication__publication_stage_rejects_reserved_stable_manifest_key_before_write.snap
---
source: crates/pv-release/tests/publication.rs
expression: "publication_error_summary(error, fixture.root())"
---
(
    "InvalidPublicationInput",
    "records/manifest.json",
    "stable manifest key must be `manifest.json`",
)
