crates/pv-release/tests/snapshots/publication__publication_stage_rejects_stable_and_versioned_manifest_key_collision_before_write.snap
---
source: crates/pv-release/tests/publication.rs
expression: "publication_error_summary(error, fixture.root())"
---
(
    "InvalidPublicationInput",
    "manifest.json",
    "publication local path collides between `versioned manifest` and `stable manifest`",
)
