crates/pv-release/tests/snapshots/publication__publication_stage_rejects_stable_manifest_key_outside_manifest_entrypoint.snap
---
source: crates/pv-release/tests/publication.rs
expression: "publication_error_summary(error, fixture.root())"
---
(
    "InvalidPublicationInput",
    "resources/redis/8.2/8.2.1-pv1/darwin-arm64/redis-8.2.1-pv1-darwin-arm64.tar.gz",
    "stable manifest key must be `manifest.json`",
)
